# bitecs

./: CMakeLists.txt  LICENSE  benchmark.cpp  conanfile.py  test.cpp
benchmarks/: benchmark.cpp  benchmark.hpp  bitecs.cpp  components.hpp  entityx.cpp  entt.cpp  flecs.cpp  gaia.cpp  ginseng.cpp  mustache.cpp
cmake/: conan2.cmake
include/: bitecs.hpp  bitecs_core.h  bitecs_impl.hpp
include/bitecs/: bitecs.hpp  bitecs_core.h  bitecs_impl.hpp
src/: bitecs_core.c  bitecs_mask.c  bitecs_private.h
tests/: test.cpp  test_mask.cpp  test_registry.cpp
